gcc/testsuite/rust/rustc/ui/unsafe/unsafe_op_in_unsafe_fn/in_2024_compatibility_dg.rs
#![deny(rust_2024_compatibility)]
#![crate_type = "lib"]

unsafe fn unsf() {}

unsafe fn foo() {
    unsf();
// { dg-error ".E0133." "" { target *-*-* } .-1 }
}

